css/index/media.css
@media only screen and (max-width: 1300px) { 
    /* header */
    .header_container{
        padding-left: 55px;
        padding-right: 55px;
    }
    /* main */
    .main_container{
        padding-left: 55px;
        padding-right: 55px;
    }
     /* portfolio */
     .portfolio_container{
        padding-left: 55px;
        padding-right: 55px;
    }
    .portfolio_container section {
        width: 324px;
    }
    /* career-path */
    .career_container {
        padding-left: 55px;
        padding-right: 55px;
    }
}


/* Large devices (desktops, less than 1200px) */
@media only screen and (max-width: 1199.98px) {
    /* header */
    .header_container .nav_list li + li::before {
        margin-right: 36px;
    }
    /* portfolio */
    #portfolio {}
        .portfolio_container section {
            width: 29.55%;
        }
}
@media only screen and (max-width: 1150.98px) {
     /* portfolio */
    .portfolio_container section {
        width: 30.65%;
        margin-right: 36px;
    }
}
@media only screen and (max-width: 1100.98px) {
    /* portfolio */
   .portfolio_container section {
       width: 30.40%;
   }
}
@media only screen and (max-width: 1000.98px) {
    /* portfolio */
   .portfolio_container section {
       width: 30.35%;
   }
}
/* Medium devices (tablets, less than 992px) */
@media only screen and (max-width: 991.98px) { 
/* header */
#header
    .header_container .nav_list {
        display: none!important;
    }
    .header_container .header_right {
        display: none!important;
    }
    .header_container button{
        display: block!important;
    }   
    .header_container .nav_bar {
        display: block!important;
    }
    .header_container{
        padding-left: 30px;
        padding-right: 30px;
    }
    /* main */
    .main_container{
        padding-left: 30px;
        padding-right: 30px;
    }
    .main_container .main_content {
        width: 420px;
    }
    .main_img::before { 
        right: 5px;
    }
    /* portfolio */
        .portfolio_container{
        padding-left: 30px;
        padding-right: 30px;
    }
    .portfolio_container section {
        width: 47.30%;
    }
    .portfolio_container section:nth-of-type(2n+2){
        margin-right: 0;
    }
    .portfolio_container section:nth-of-type(2n+1){
        margin-right: 36px;
    }
    .portfolio_container h2 {
        margin-bottom: 25px;
        font-size: 31px;
    }
    .portfolio_container {
        padding-top: 52px;
        padding-bottom: 88px;
    }
    /* career-path */
    .career_container {
        padding-left: 30px;
        padding-right: 30px;
    }
    .career_container .career_list {
        width: 320px;
    }
    .career_container .career_description {
        margin-left: 320px;
    }
}

/* Small devices (landscape phones, less than 768px) */
@media only screen and (max-width: 800.98px) { 
    /* header */
    .header_container{
        padding-left: 15px;
        padding-right: 15px;
    }
    /* main */
    .main_container{
        padding-left: 15px;
        padding-right: 15px;
    }
    .main_container .main_img {
        display: none!important;;
    }
    .main_container .main_content {
        width: 100%;
        text-align: center;
    }
    /* portfolio */
    .portfolio_container{
        padding-left: 15px;
        padding-right: 15px;
    }
    .portfolio_container section {
        width: 48.70%;
    }
    .portfolio_container section:nth-of-type(2n+1) {
        margin-right: 15px;
      }
    /* career-path */
    .career_container {
        padding-left: 15px;
        padding-right: 15px;
    }
}


/* Small devices (landscape phones, less than 768px) */
@media only screen and (max-width: 767.98px) { 
    .portfolio_container section {
        width: 100%;
    }
    .portfolio_container section:nth-child(2n+1) {
        float: none;
        margin-right: 0!important;
    }
    /* career-path */
    .career_container {
    }
    .career_container .career_list {
        width: 100%;
        float: none;
    }
    .career_container .career_list ul {
        width: 100%;
        display: inline-block;
        vertical-align: middle;
        text-align: left;
    }
    .career_container .career_list ul li {
        display: inline-block;
        vertical-align: middle;

    }
    .career_container .career_list ul li a .chevron-right-icon {
        right: 0;
    }
    .career_container .career_description {
        margin-left: 0;
    }
    .career_container .career_description section .experience_list li p {
        display: inline-block;
    }
    .career_container .career_list ul li a {
        padding-left: 0;
    }
    .career_container .career_list ul {
        margin-top: 70px;
    }
    .career_container {
        padding-top: 74px;
        padding-bottom: 74px;
    }
    .career_container .career_list h2 {
        font-size: 31px;
    }
 }

/* Extra small devices (portrait phones, less than 576px) */
@media only screen and (max-width: 575.98px) { }

